--- a/config/abyssalcraft.cfg
+++ b/config/abyssalcraft.cfg
@@ -45,27 +45,27 @@ biome_spawning {
 biome_weight {
     # Biome weight for the Coralium Infested Swamp biome, controls the chance of it generating (n out of 100)
     # [range: 0 ~ 100, default: 5]
-    I:"Coralium Infested Swamp"=5
+    I:"Coralium Infested Swamp"=1
 
     # Biome weight for the Darklands biome, controls the chance of it generating (n out of 100).
     # [range: 0 ~ 100, default: 5]
-    I:Darklands=5
+    I:Darklands=1
 
     # Biome weight for the Darklands Forest biome, controls the chance of it generating (n out of 100)
     # [range: 0 ~ 100, default: 5]
-    I:"Darklands Forest"=5
+    I:"Darklands Forest"=1
 
     # Biome weight for the Darklands Highland biome, controls the chance of it generating (n out of 100)
     # [range: 0 ~ 100, default: 5]
-    I:"Darklands Highland"=5
+    I:"Darklands Highland"=1
 
     # Biome weight for the Darklands Mountain biome, controls the chance of it generating (n out of 100)
     # [range: 0 ~ 100, default: 5]
-    I:"Darklands Mountain"=5
+    I:"Darklands Mountain"=1
 
     # Biome weight for the Darklands Plains biome, controls the chance of it generating (n out of 100)
     # [range: 0 ~ 100, default: 5]
-    I:"Darklands Plains"=5
+    I:"Darklands Plains"=1
 }
 
 
@@ -115,18 +115,18 @@ general {
 
     # Spawn weight for Abyssal Zombies in The End. Setting to 0 will stop them from spawning altogether.
     # [range: 0 ~ 10, default: 5]
-    I:"End Abyssal Zombie spawn weight"=5
+    I:"End Abyssal Zombie spawn weight"=0
 
     # Toggles whether entities that emits particles should do so.
     B:"Entity particles"=true
 
     # Spawn weight for the Evil Animals (Pigs, Cows, Chickens), keep under 35 to avoid complete annihilation.
     # [range: 0 ~ 100, default: 20]
-    I:"Evil Animal spawn weight"=20
+    I:"Evil Animal spawn weight"=5
 
     # If enabled, sets the creature type of Evil Animals to "monster". The creature type affects how a entity spawns, eg "creature" treats the entity as an animal, while "monster" treats it as a hostile mob. If you enable this, Evil Animals will spawn like any other hostile mobs, instead of mimicking vanilla animals.
     # §c[Minecraft Restart Required]§r
-    B:"Evil Animals Are Monsters"=false
+    B:"Evil Animals Are Monsters"=true
 
     # Toggles Hardcore mode. If set to true, all mobs (in the mod) will become tougher.
     B:"Hardcore Mode"=false
