--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -284,6 +284,23 @@ crafting {
     B:org.cyclops.evilcraft.block.NetherfishSpawn=true
     B:"org.cyclops.evilcraft.block.UndeadLogConfig$1"=true
     B:"org.cyclops.evilcraft.block.UndeadPlankConfig$1"=true
+    B:shadowfox.botanicaladdons.common.block.BlockStorage=true
+    B:"shadowfox.botanicaladdons.common.block.ModBlocks$1$1"=true
+    B:"shadowfox.botanicaladdons.common.block.ModBlocks$3$1"=true
+    B:shadowfox.botanicaladdons.common.block.alt.BlockAltPlanks=true
+    B:shadowfox.botanicaladdons.common.block.colored.BlockColoredLamp=true
+    B:shadowfox.botanicaladdons.common.block.colored.BlockIridescentDirt=true
+    B:shadowfox.botanicaladdons.common.block.colored.BlockIridescentPlanks=true
+    B:"shadowfox.botanicaladdons.common.block.colored.BlockIridescentPlanks$BlockRainbowPlanks"=true
+    B:shadowfox.botanicaladdons.common.block.colored.BlockRainbowDirt=true
+    B:shadowfox.botanicaladdons.common.block.colored.BlockRainbowLog=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.calico.BlockCalicoLog=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.calico.BlockCalicoPlanks=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.sealing.BlockAmplifier=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.sealing.BlockSealPlanks=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.sealing.BlockSealingLog=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.thunder.BlockThunderLog=true
+    B:shadowfox.botanicaladdons.common.block.dendrics.thunder.BlockThunderPlanks=true
     B:team.chisel.common.block.BlockCarvable=true
     B:team.chisel.common.block.BlockCarvableAltarComponent=true
     B:team.chisel.common.block.BlockCarvableBookshelf=true
