--- a/config/xreliquary.cfg
+++ b/config/xreliquary.cfg
@@ -10,83 +10,83 @@ easy_mode_recipes {
     # Easy mode recipe for Alkahestry Tome [default: false]
     B:alkahestry_tome=false
 
-    # Easy mode recipe for Altar of Light [default: true]
-    B:altar=true
+    # Easy mode recipe for Altar of Light [default: false]
+    B:altar=false
 
-    # Easy mode recipe for Angelic Feather [default: true]
-    B:angelic_feather=true
+    # Easy mode recipe for Angelic Feather [default: false]
+    B:angelic_feather=false
 
-    # Easy mode recipe for Destruction Catalyst [default: true]
-    B:destruction_catalyst=true
+    # Easy mode recipe for Destruction Catalyst [default: false]
+    B:destruction_catalyst=false
 
-    # Easy mode recipe for Emperor Chalice [default: true]
-    B:emperor_chalice=true
+    # Easy mode recipe for Emperor Chalice [default: false]
+    B:emperor_chalice=false
 
-    # Easy mode recipe for Ender Staff [default: true]
-    B:ender_staff=true
+    # Easy mode recipe for Ender Staff [default: false]
+    B:ender_staff=false
 
-    # Easy mode recipe for Fertile Essence [default: true]
-    B:fertile_essence=true
+    # Easy mode recipe for Fertile Essence [default: false]
+    B:fertile_essence=false
 
-    # Easy mode recipe for Fortune Coin [default: true]
-    B:fortune_coin=true
+    # Easy mode recipe for Fortune Coin [default: false]
+    B:fortune_coin=false
 
-    # Easy mode recipe for Glacial Staff [default: true]
-    B:glacial_staff=true
+    # Easy mode recipe for Glacial Staff [default: false]
+    B:glacial_staff=false
 
-    # Easy mode recipe for Hero Medallion [default: true]
-    B:hero_medallion=true
+    # Easy mode recipe for Hero Medallion [default: false]
+    B:hero_medallion=false
 
-    # Easy mode recipe for Ice Magus Rod [default: true]
-    B:ice_magus_rod=true
+    # Easy mode recipe for Ice Magus Rod [default: false]
+    B:ice_magus_rod=false
 
-    # Easy mode recipe for Infernal Chalice [default: true]
-    B:infernal_chalice=true
+    # Easy mode recipe for Infernal Chalice [default: false]
+    B:infernal_chalice=false
 
-    # Easy mode recipe for Infernal Claws [default: true]
-    B:infernal_claws=true
+    # Easy mode recipe for Infernal Claws [default: false]
+    B:infernal_claws=false
 
-    # Easy mode recipe for Infernal Tear [default: true]
-    B:infernal_tear=true
+    # Easy mode recipe for Infernal Tear [default: false]
+    B:infernal_tear=false
 
-    # Easy mode recipe for Interdiction Torch [default: true]
-    B:interdiction_torch=true
+    # Easy mode recipe for Interdiction Torch [default: false]
+    B:interdiction_torch=false
 
-    # Easy mode recipe for Kraken Shell [default: true]
-    B:kraken_shell=true
+    # Easy mode recipe for Kraken Shell [default: false]
+    B:kraken_shell=false
 
-    # Easy mode recipe for Lantern of Paranoia [default: true]
-    B:lantern_of_paranoia=true
+    # Easy mode recipe for Lantern of Paranoia [default: false]
+    B:lantern_of_paranoia=false
 
-    # Easy mode recipe for Magicbane [default: true]
-    B:magicbane=true
+    # Easy mode recipe for Magicbane [default: false]
+    B:magicbane=false
 
-    # Easy mode recipe for Pyromancer Staff [default: true]
-    B:pyromancer_staff=true
+    # Easy mode recipe for Pyromancer Staff [default: false]
+    B:pyromancer_staff=false
 
-    # Easy mode recipe for Rending Gale [default: true]
-    B:rending_gale=true
+    # Easy mode recipe for Rending Gale [default: false]
+    B:rending_gale=false
 
-    # Easy mode recipe for Rod of Lyssa [default: true]
-    B:rod_of_lyssa=true
+    # Easy mode recipe for Rod of Lyssa [default: false]
+    B:rod_of_lyssa=false
 
-    # Easy mode recipe for Salamander Eye [default: true]
-    B:salamander_eye=true
+    # Easy mode recipe for Salamander Eye [default: false]
+    B:salamander_eye=false
 
-    # Easy mode recipe for Seeker Shot [default: true]
-    B:seeker_shot=true
+    # Easy mode recipe for Seeker Shot [default: false]
+    B:seeker_shot=false
 
-    # Easy mode recipe for Serpent Staff [default: true]
-    B:serpent_staff=true
+    # Easy mode recipe for Serpent Staff [default: false]
+    B:serpent_staff=false
 
-    # Easy mode recipe for Sojourner Staff [default: true]
-    B:sojourner_staff=true
+    # Easy mode recipe for Sojourner Staff [default: false]
+    B:sojourner_staff=false
 
-    # Easy mode recipe for Void Tear [default: true]
-    B:void_tear=true
+    # Easy mode recipe for Void Tear [default: false]
+    B:void_tear=false
 
-    # Easy mode recipe for Wraith Node [default: true]
-    B:wraith_node=true
+    # Easy mode recipe for Wraith Node [default: false]
+    B:wraith_node=false
 }
 
 
