--- a/config/JEI/worldSettings.cfg
+++ b/config/JEI/worldSettings.cfg
@@ -3,14 +3,9 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-78688046 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
-
-    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=suppl
-
-    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -21,7 +16,7 @@ world1855637915 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=
+    S:filterText=incen
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
