--- a/config/JEI/worldSettings.cfg
+++ b/config/JEI/worldSettings.cfg
@@ -16,7 +16,7 @@ world1855637915 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=incen
+    S:filterText=soul ca
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
