--- a/config/JEI/worldSettings.cfg
+++ b/config/JEI/worldSettings.cfg
@@ -10,13 +10,29 @@ world-78688046 {
 }
 
 
+world1690200562 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world1855637915 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=iron
+    B:overlayEnabled=true
+}
+
+
+world856609915 {
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=soul ca
+    S:filterText=
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
