--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -80,6 +80,14 @@ crafting {
 
 
 "enabled blocks" {
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesBlue=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesBrown=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesCyan=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesGray=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesGreen=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesPurple=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesRed=true
+    B:Aarron.WallpaperCraft.blocks.FancyTiles.FancyTilesYellow=true
     B:Aarron.WallpaperCraft.blocks.bricks.BrickBlue=true
     B:Aarron.WallpaperCraft.blocks.bricks.BrickBrown=true
     B:Aarron.WallpaperCraft.blocks.bricks.BrickCyan=true
@@ -88,6 +96,14 @@ crafting {
     B:Aarron.WallpaperCraft.blocks.bricks.BrickPurple=true
     B:Aarron.WallpaperCraft.blocks.bricks.BrickRed=true
     B:Aarron.WallpaperCraft.blocks.bricks.BrickYellow=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickBlue=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickBrown=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickCyan=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickGray=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickGreen=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickPurple=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickRed=true
+    B:Aarron.WallpaperCraft.blocks.bricks.ColouredBrickYellow=true
     B:Aarron.WallpaperCraft.blocks.bricks.StoneBrickBlue=true
     B:Aarron.WallpaperCraft.blocks.bricks.StoneBrickBrown=true
     B:Aarron.WallpaperCraft.blocks.bricks.StoneBrickCyan=true
@@ -104,6 +120,14 @@ crafting {
     B:Aarron.WallpaperCraft.blocks.clay.ClayPurple=true
     B:Aarron.WallpaperCraft.blocks.clay.ClayRed=true
     B:Aarron.WallpaperCraft.blocks.clay.ClayYellow=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskBlue=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskBrown=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskCyan=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskGray=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskGreen=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskPurple=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskRed=true
+    B:Aarron.WallpaperCraft.blocks.damask.DamaskYellow=true
     B:Aarron.WallpaperCraft.blocks.dotted.DiagonallyDottedBlue=true
     B:Aarron.WallpaperCraft.blocks.dotted.DiagonallyDottedBrown=true
     B:Aarron.WallpaperCraft.blocks.dotted.DiagonallyDottedCyan=true
@@ -128,6 +152,15 @@ crafting {
     B:Aarron.WallpaperCraft.blocks.floral.FloralPurple=true
     B:Aarron.WallpaperCraft.blocks.floral.FloralRed=true
     B:Aarron.WallpaperCraft.blocks.floral.FloralYellow=true
+    B:Aarron.WallpaperCraft.blocks.jewel.Jewel=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampBlue=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampBrown=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampCyan=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampGray=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampGreen=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampPurple=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampRed=true
+    B:Aarron.WallpaperCraft.blocks.lamps.AuraLampYellow=true
     B:Aarron.WallpaperCraft.blocks.lamps.StoneLampBlue=true
     B:Aarron.WallpaperCraft.blocks.lamps.StoneLampBrown=true
     B:Aarron.WallpaperCraft.blocks.lamps.StoneLampCyan=true
@@ -351,6 +384,8 @@ crafting {
     B:vazkii.quark.world.block.BlockBasalt=true
     B:vazkii.quark.world.block.BlockBiotite=true
     B:vazkii.quark.world.block.BlockBiotiteOre=true
+    B:vazkii.quark.world.block.BlockLimestone=true
+    B:vazkii.quark.world.block.BlockMarble=true
 }
 
 
