--- a/config/event_tweaks.cfg
+++ b/config/event_tweaks.cfg
@@ -67,6 +67,12 @@ handlers {
 
         #  [default: false]
         B:"Mobs Get Strength Boost When Damaged By Player"=false
+
+        #  [default: false]
+        B:"Player Keeps EXP Level On Death"=false
+
+        # Stops mobs like Enderman and Shulkers from warping away [default: false]
+        B:"Stop Mobs From Teleporting"=false
     }
 
 }
