--- a/config/minecolonies.cfg
+++ b/config/minecolonies.cfg
@@ -22,6 +22,9 @@ gameplay {
     # Display in-development features which do not work and may break your game
     B:development=false
 
+    # Enable the automatic colony protection?
+    B:enableColonyProtection=true
+
     # Limits the number of checked blocks per builder update
     I:maxBlocksCheckedByBuilder=1000
 
@@ -33,6 +36,9 @@ gameplay {
 
     # Empty space between town hall boundaries
     I:townHallPadding=20
+
+    # Turn off explosions inside the colonies radius?
+    B:turnOffExplosionsInColonies=true
 
     # Colony size (radius)
     I:workingRangeTownHall=100
