--- a/config/sstow/SoulShards.cfg
+++ b/config/sstow/SoulShards.cfg
@@ -215,6 +215,7 @@ enchantments {
     B:arsmagica2.Whirlwind=true
     B:arsmagica2.WinterGuardian=true
     B:arsmagica2.WinterGuardianArm=true
+    B:embers.ancientGolem=true
     B:evilcraft.controlledZombie=true
     B:evilcraft.netherfish=true
     B:evilcraft.poisonousLibelle=true
