--- a/config/JEI/worldSettings.cfg
+++ b/config/JEI/worldSettings.cfg
@@ -2,6 +2,14 @@
 
 ~CONFIG_VERSION: 0.1.0
 
+world-465856113 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-78688046 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
