--- a/config/DLDungeonsJBG/chests.cfg
+++ b/config/DLDungeonsJBG/chests.cfg
@@ -187,3 +187,42 @@ loot, 8, minecraft:diamond_block,       1,  12
 loot, 8, minecraft:emerald_block,       1,  12
 loot, 8, minecraft:skull(1),            1,  8
 loot, 8, minecraft:beacon,              1,  1
+
+#Added Simply magic stuff
+#type, level[1-7], modid.name, minimum amount, maximum amount
+
+loot, 4, xreliquary:altar_idle ,1,1
+loot, 2, xreliquary:angelic_feather ,1,1
+loot, 5, xreliquary:destruction_catalyst ,1,1
+loot, 2, xreliquary:emperor_chalice ,1,1
+loot, 4, xreliquary:ender_staff ,1,1
+loot, 2, xreliquary:fertile_lilypad ,1,3
+loot, 2, xreliquary:fortune_coin ,1,1
+loot, 2, xreliquary:glacial_staff ,1,1
+loot, 2, xreliquary:harvest_rod ,1,1
+loot, 3, xreliquary:hero_medallion ,1,1
+loot, 4, xreliquary:holy_hand_grenade ,1,4
+loot, 3, xreliquary:ice_magus_rod ,1,1
+loot, 6, xreliquary:infernal_chalice ,1,1
+loot, 6, xreliquary:infernal_claws ,1,1
+loot, 7, xreliquary:infernal_tear ,1,1
+loot, 5, xreliquary:interdiction_torch ,1,4
+loot, 3, xreliquary:kraken_shell ,1,1
+loot, 2, xreliquary:lantern_of_paranoia ,1,1
+loot, 3, xreliquary:magicbane ,1,1
+loot, 3, xreliquary:mercy_cross ,1,1
+loot, 5, xreliquary:midas_touchstone ,1,1
+loot, 7, xreliquary:mob_charm ,1,1
+loot, 7, xreliquary:phoenix_down ,1,1
+loot, 7, xreliquary:pyromancer_staff ,1,1
+loot, 7, xreliquary:rending_gale ,1,1
+loot, 4, xreliquary:rod_of_lyssa ,1,1
+loot, 5, xreliquary:salamander_eye ,1,1
+loot, 4, xreliquary:serpent_staff ,1,1
+loot, 6, xreliquary:shears_of_winter ,1,1
+loot, 6, xreliquary:twilight_cloak ,1,1
+loot, 6, xreliquary:witherless_rose ,1,1
+
+
+
+
