--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,5 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
+#Wed Jan 04 19:35:32 GMT-06:00 2017
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
