--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -317,6 +317,7 @@ crafting {
     B:org.cyclops.evilcraft.block.NetherfishSpawn=true
     B:"org.cyclops.evilcraft.block.UndeadLogConfig$1"=true
     B:"org.cyclops.evilcraft.block.UndeadPlankConfig$1"=true
+    B:pixlepix.auracascade.block.BlockMonitor=true
     B:shadowfox.botanicaladdons.common.block.BlockStorage=true
     B:"shadowfox.botanicaladdons.common.block.ModBlocks$1$1"=true
     B:"shadowfox.botanicaladdons.common.block.ModBlocks$3$1"=true
