--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,4 +1,5 @@
 #Splash screen properties
+#Wed Jan 04 19:34:21 GMT-06:00 2017
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
