Hidden unused Reliquary Items
Hidden unused Reliquary Items

--- a/config/JEI/itemBlacklist.cfg
+++ b/config/JEI/itemBlacklist.cfg
@@ -11,6 +11,22 @@
 advanced {
     # List of items that should not be displayed in the item list. Format: modId[:name[:meta]]. Edit Mode will automatically add or remove entries here. [Default: []]
     S:itemBlacklist <
+        xreliquary:magazine
+        xreliquary:apothecary_mortar
+        xreliquary:bullet
+        fluid:milk
+        xreliquary:potion
+        xreliquary:mob_charm_fragment
+        xreliquary:mob_ingredient
+        xreliquary:gun_part:2
+        xreliquary:wraith_node
+        xreliquary:handgun
+        xreliquary:potion_essence
+        fluid:xpjuice
+        xreliquary:apothecary_cauldron
+        xreliquary:tipped_arrow
+        xreliquary:gun_part:0
+        xreliquary:gun_part:1
      >
 }
 
