Updated Reliquary Loot
Updated Reliquary Loot

--- a/config/DLDungeonsJBG/chests.cfg
+++ b/config/DLDungeonsJBG/chests.cfg
@@ -222,7 +222,8 @@ loot, 4, xreliquary:serpent_staff ,1,1
 loot, 6, xreliquary:shears_of_winter ,1,1
 loot, 6, xreliquary:twilight_cloak ,1,1
 loot, 6, xreliquary:witherless_rose ,1,1
-
+loot, 2, xreliquary:sojourner_staff,1,1
+loot, 5, xreliquary:void_tear_empty,1,1
 
 
 
