Updates modlist, adds Bibliocraft/Iron chests

--- a/config/ExtraBitManipulation/common.cfg
+++ b/config/ExtraBitManipulation/common.cfg
@@ -41,7 +41,7 @@
     # If set to true, the recipe for the Bit Wrench will be shaped, and thus depend on the order/number of elements.. If set to false, it will be shapeless and will be order-independent. (default = true) [default: true]
     B:"Is Shaped"=true
 
-    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Bit Wrench. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [], [ExtraBitManipulation:BitWrenchHead], [], [minecraft:iron_ingot], [], [], [], []]
+    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Bit Wrench. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [ExtraBitManipulation:BitWrenchHead], [minecraft:iron_ingot], []]
     S:Recipe <
         
         
@@ -100,7 +100,7 @@
     # If set to true, the recipe for the Curved Sculpting Spade will be shaped, and thus depend on the order/number of elements.. If set to false, it will be shapeless and will be order-independent. (default = true) [default: true]
     B:"Is Shaped"=true
 
-    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Curved Sculpting Spade. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [], [ExtraBitManipulation:SculptingSpadeCurvedHead], [], [minecraft:iron_ingot], [], [], [], []]
+    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Curved Sculpting Spade. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [ExtraBitManipulation:SculptingSpadeCurvedHead], [minecraft:iron_ingot], []]
     S:Recipe <
         
         
@@ -159,7 +159,7 @@
     # If set to true, the recipe for the Curved Sculpting Wire will be shaped, and thus depend on the order/number of elements.. If set to false, it will be shapeless and will be order-independent. (default = true) [default: true]
     B:"Is Shaped"=true
 
-    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Curved Sculpting Wire. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [], [ExtraBitManipulation:SculptingLoopHead], [], [minecraft:iron_ingot], [], [], [], []]
+    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Curved Sculpting Wire. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [ExtraBitManipulation:SculptingLoopHead], [minecraft:iron_ingot], []]
     S:Recipe <
         
         
@@ -218,7 +218,7 @@
     # If set to true, the recipe for the Flat Sculpting Spade will be shaped, and thus depend on the order/number of elements.. If set to false, it will be shapeless and will be order-independent. (default = true) [default: true]
     B:"Is Shaped"=true
 
-    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Flat Sculpting Spade. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [], [ExtraBitManipulation:SculptingSpadeSquaredHead], [], [minecraft:iron_ingot], [], [], [], []]
+    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Flat Sculpting Spade. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [ExtraBitManipulation:SculptingSpadeSquaredHead], [minecraft:iron_ingot], []]
     S:Recipe <
         
         
@@ -277,7 +277,7 @@
     # If set to true, the recipe for the Modeling Tool will be shaped, and thus depend on the order/number of elements.. If set to false, it will be shapeless and will be order-independent. (default = true) [default: true]
     B:"Is Shaped"=true
 
-    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Modeling Tool. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [], [ExtraBitManipulation:ModelingToolHead], [], [minecraft:iron_ingot], [], [], [], []]
+    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Modeling Tool. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [ExtraBitManipulation:ModelingToolHead], [minecraft:iron_ingot], []]
     S:Recipe <
         
         
@@ -292,6 +292,18 @@
 
     # If set to true, the string names given for the Modeling Tool recipe will be used to look up entries in the Ore Dictionary. If set to false, they will be used to look up Items by name or ID. (default = false) [default: false]
     B:"Use Ore Dictionary"=false
+}
+
+
+"recipe disable" {
+    # Disables the registration of the diamond nugget with the Ore Dictionary. (This will effectively disable the 9 nuggets to 1 diamond recipe, since it is uses the Ore Dictionary) [default: false]
+    B:"Disable Diamond Nugget Ore Dict"=false
+
+    # Disables the recipe of 1 diamond to 9 diamond nuggets (i.e. 9 instances of 'nuggetDiamond' Ore Dictionary entries). [default: false]
+    B:"Disable Diamond to Nuggets Recipe"=false
+
+    # Disables the recipe of 9 diamond nuggets to 1 diamond. [default: false]
+    B:"Disable Nuggets to Diamond Recipe"=false
 }
 
 
@@ -336,7 +348,7 @@
     # If set to true, the recipe for the Straight Sculpting Wire will be shaped, and thus depend on the order/number of elements.. If set to false, it will be shapeless and will be order-independent. (default = true) [default: true]
     B:"Is Shaped"=true
 
-    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Straight Sculpting Wire. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [], [ExtraBitManipulation:SculptingSquareHead], [], [minecraft:iron_ingot], [], [], [], []]
+    # The Ore Dictionary names or Item names/IDs of components of the crafting recipe for the Straight Sculpting Wire. The elements of the list correspond to the slots of the crafting grid (left to right / top to bottom). If the recipe shaped, the list must have 4 elements to be a 2x2 recipe, 9 elements to be a 3x3 recipe, etc (i.e. must make a whole grid; root n elements for an n by n grid). Inputting an incorrect number of elements will result in use of the default recipe. Empty strings denote empty slots in the recipe. If the recipe shapeless, order is not important, and duplicates or empty strings will be ignored. Whether the recipe is shaped or shapeless, strings that are not found in the Ore Dictionary or are not valid item names/IDs will be replaced with empty spaces. The default recipe will be used if none of the provided strings are found. [default: [], [ExtraBitManipulation:SculptingSquareHead], [minecraft:iron_ingot], []]
     S:Recipe <
         
         
@@ -351,6 +363,21 @@
 
     # If set to true, the string names given for the Straight Sculpting Wire recipe will be used to look up entries in the Ore Dictionary. If set to false, they will be used to look up Items by name or ID. (default = false) [default: false]
     B:"Use Ore Dictionary"=false
+}
+
+
+"thrown bit properties" {
+    # Disables the extinguishing of blocks when bits with water as their material are thrown at them. If disabled, the default behavior of placing, if possible, or dropping as items if not possible will be used. (default = enabled) [default: false]
+    B:"Disable Extinguish Blocks"=false
+
+    # Disables the extinguishing of entities when bits with water as their material are thrown at them. If disabled, the default behavior of striking without damaging and doping as items will be used. (default = enabled) [default: false]
+    B:"Disable Extinguish Entities"=false
+
+    # Disables the igniting of blocks when bits with lava as their material are thrown at them. If disabled, the default behavior of placing, if possible, or dropping as items if not possible will be used. (default = enabled) [default: false]
+    B:"Disable Ignite Blocks"=false
+
+    # Disables the igniting of entities when bits with lava as their material are thrown at them. If disabled, the default behavior of striking without damaging and doping as items will be used. (default = enabled) [default: false]
+    B:"Disable Ignite Entities"=false
 }
 
 
