--- a/config/ExtraBitManipulation/sculpting_data.cfg
+++ b/config/ExtraBitManipulation/sculpting_data.cfg
@@ -16,6 +16,9 @@
     #  [default: false]
     B:"Hollow Shapes (wire)"=false
 
+    #  [default: true]
+    B:"Offset Shape for Placement"=true
+
     #  [default: false]
     B:"Open Ends"=false
 
