--- a/config/ExtraBitManipulation/server.cfg
+++ b/config/ExtraBitManipulation/server.cfg
@@ -18,3 +18,27 @@
 }
 
 
+"thrown bit properties" {
+    # The amount of damage (1 = half a heart) applied to entities when hit with bits. If this is set to 0, there will be no effect on players, but all non-player entities will still get all the effects of damage (knock-back, color change, etc.), despite not actually taking any damage. If this is set to a very small value, then those same effects will apply to all entities--including players--without doing any appreciable damage. (default = essentially none) [range: 0.0 ~ 3.4028235E38, default: 1.4E-45]
+    S:"Damage Inflicted"=1.4E-45
+
+    # The amount of damage (1 = half a heart) applied to Blazes when hit with water bits. If this is set to 0, they will still get all the effects of damage (knock-back, color change, etc.), despite not actually taking any damage. (default = half a heart) [range: 0.0 ~ 3.4028235E38, default: 1.0]
+    S:"Damage Inflicted On Blazes"=1.0
+
+    # Disables the damaging of Blazes when hit with water bits. See 'Damage Inflicted On Blazes' for explanation of why it may be useful for this to be set to true, despite setting the amount to 0. (default = does damage) [default: false]
+    B:"Disable Inflicted Blaze Damage"=false
+
+    # Disables the damaging of entities when hit with bits. See 'Damage Inflicted' for explanation of why it may be useful for this to be set to true, despite setting the amount to 0. (default = does damage) [default: false]
+    B:"Disable Inflicted Damage"=false
+
+    # Number of seconds that an entity will remain on fire for when ignited by a lava bit, if ignite entities is not disabled. (default = 1 second) [range: 0 ~ 2147483647, default: 1]
+    I:"Entity Burn Time"=1
+
+    # A relative value that denote the amount of random deviation a thrown bit will have from the direction the player is looking. (default = 1) [range: 0.0 ~ 3.4028235E38, default: 1.0]
+    S:Inaccuracy=1.0
+
+    # The initial velocity in meters per tick that a thrown bit will initially have when thrown. (default = 1.5 meters per tick bits) [range: 0.0 ~ 3.4028235E38, default: 1.5]
+    S:"Initial Velocity"=1.5
+}
+
+
