--- a/config/event_tweaks.cfg
+++ b/config/event_tweaks.cfg
@@ -1,5 +1,24 @@
 # Configuration file
 
+"applying potion at certain level event" {
+
+    " requires tick event handler = true" {
+        # Higher values will impact performance less. Potion also refreshes and applies on this interval. [range: 1 ~ 10, default: 1]
+        I:"How many seconds this event will run"=1
+
+        # Checks values including and greater [range: 0 ~ 999, default: 10]
+        I:"Minimum Required Levels To Apply Potion Effect"=10
+
+        # 0 = base potion [range: 0 ~ 999, default: 0]
+        I:"Potion Effect Amplifier"=0
+
+        # Invalid potion IDs will default to 1. Minecraft IDs: http://minecraft.gamepedia.com/Status_effect [range: 1 ~ 1024, default: 1]
+        I:"Potion ID To Apply"=1
+    }
+
+}
+
+
 client {
     # Latest builds are fewer bugs! [default: true]
     B:"Enable Version Checker"=false
@@ -45,12 +64,18 @@ handlers {
 
         # Disables crawling into bed. [default: false]
         B:"Disable Sleeping In Bed"=false
-
-        # Players will die instantly when taking drowning damage [default: false]
         B:"Hardcore Air"=false
-
-        # Players will die when taking starvation damage [default: false]
         B:"Hardcore Hunger"=false
+    }
+
+}
+
+
+"misc tweaks" {
+
+    " do not require any handler to be enabled" {
+        #  [default: false]
+        B:"Stop enderman from picking up blocks"=false
     }
 
 }
@@ -64,6 +89,15 @@ handlers {
 
         # If larger than 0, creepers will explode when they die. Normal Creeper Explosion = 3 [range: 0 ~ 9, default: 0]
         I:"Creeper Death Explosion Strength"=0
+
+        # Players will die instantly when taking drowning damage [default: false]
+        B:"Hardcore Air"=false
+
+        # Players will die when taking starvation damage [default: false]
+        B:"Hardcore Hunger"=false
+
+        #  [range: 0 ~ 20, default: 20]
+        I:"Hunger Level After Death"=20
 
         #  [default: false]
         B:"Mobs Get Strength Boost When Damaged By Player"=false
@@ -83,6 +117,16 @@ handlers {
     " requires sleep event handler = true" {
         # How much sleeping should heal the player. 1 = half heart [range: 0.0 ~ 20.0, default: 0.0]
         S:"Health restored after sleeping"=0.0
+    }
+
+}
+
+
+"tick events" {
+
+    " requires tick event handler = true" {
+        # Enables Tick Events [default: false]
+        B:"Tick Event Handler"=false
     }
 
 }
