--- a/config/minecolonies.cfg
+++ b/config/minecolonies.cfg
@@ -7,6 +7,12 @@ gameplay {
     # Always render Citizen's name tag?
     B:alwaysRenderNameTag=true
 
+    # Block mining Delay modifier, taken into account to determine how long a block need to be successfully mined
+    I:blockMiningDelayModifier=1000
+
+    # How many tick between placing blocks for the builder?
+    I:builderBuildBlockDelay=0
+
     # Does Builder have infinite resources?
     B:builderInfiniteResources=false
 
