--- a/config/ExtraBitManipulation/client.cfg
+++ b/config/ExtraBitManipulation/client.cfg
@@ -115,26 +115,26 @@
     # Total travel distance of the arrowhead overlay used in block/texture translation/rotation as measured from the center of the block face the player is looking at. If this is set to the minimum value of 0, only one arrow head will be rendered and no movement will occur. (default = 0.75 meters) [range: 0.0 ~ 1.7976931348623157E308, default: 0.75]
     S:"Arrow Movement Distance"=0.75
 
-    # Number of frames over which the arrowhead overlay used in block/texture translation/rotation will travel from one end to the other of the distance specified by 'Arrow Movement Distance'. If this is set to the minimum value of 1, no movement will occur. (default = 2 seconds at 60 fps) [range: 1.0 ~ 1.7976931348623157E308, default: 120.0]
-    S:"Arrow Movement Period"=120.0
+    # Number of milliseconds over which the arrowhead overlay used in block/texture translation/rotation will travel from one end to the other of the distance specified by 'Arrow Movement Distance'. (default = 2 seconds) [range: 1 ~ 2147483647, default: 2000]
+    S:"Arrow Movement Period"=2000
 
     # Distance between the three moving arrowhead overlays used in block/texture translation/rotation. If this is set to the minimum value of 0, only one arrow head will be rendered. (default = 1/3 of the default distance of 0.75 meters, i.e. evenly spaced) [range: 0.0 ~ 1.7976931348623157E308, default: 0.25]
     S:"Arrow Spacing"=0.25
 
-    # Prevents overlays from rendering. (default = false) [default: false]
+    # Prevents overlays from rendering. (default = enabled) [default: false]
     B:"Disable Overlay Rendering"=false
 
     # Half the total travel distance of the bidirectional arrow overlay used in block/texture mirroring as measured from the center of the block face the player is looking at. If this is set to the minimum value of 0, no oscillation will occur. (default = 0.1 meters) [range: 0.0 ~ 1.7976931348623157E308, default: 0.1]
     S:"Mirror Oscillation Amplitude"=0.1
 
-    # Number of frames over which the bidirectional arrow overlay used in block/texture mirroring will complete one oscillation. If this is set to the minimum value of 1, no oscillation will occur. (default = 0.83 seconds at 60 fps) [range: 1.0 ~ 1.7976931348623157E308, default: 50.0]
-    S:"Mirror Oscillation Period"=50.0
+    # Number of milliseconds over which the bidirectional arrow overlay used in block/texture mirroring will complete one oscillation. (default = 0.83 seconds) [range: 1 ~ 2147483647, default: 830]
+    S:"Mirror Oscillation Period"=830
 
-    # Number of frames over which the cyclical arrow overlay used in block/texture rotation will complete one rotation. If this is set to the minimum value of 1, no rotation will occur. (default = 3 seconds at 60 fps) [range: 1.0 ~ 1.7976931348623157E308, default: 180.0]
-    S:"Rotation Period"=180.0
+    # Number of milliseconds over which the cyclic arrow overlay used in block/texture rotation will complete one rotation. (default = 3 seconds) [range: 1 ~ 2147483647, default: 3000]
+    S:"Rotation Period"=3000
 
-    # Number of frames over which the circle overlay used in block translation will complete one cycle of scaling from a point to full-sized or vice versa. If this is set to the minimum value of 1, no scaling will occur. (default = 1.33 seconds at 60 fps) [range: 1.0 ~ 1.7976931348623157E308, default: 80.0]
-    S:"Translation Scale Period"=80.0
+    # Number of milliseconds over which the circle overlay used in block translation will complete one cycle of scaling from a point to full-sized or vice versa. (default = 1.3 seconds) [range: 1 ~ 2147483647, default: 1300]
+    S:"Translation Scale Period"=1300
 }
 
 
@@ -165,6 +165,9 @@
 
     # Players and sculpting tools will initialize with this sculpting wire hollow property value (shape is either hollow or solid). (default = false) [default: false]
     B:"Hollow Shapes (wire)"=false
+
+    # Players and sculpting tools will initialize with this shape placement property value (shapes added with spades can be centered around the bit clicked, of offset opposite the side clicked). (default = true) [default: true]
+    B:"Offset Shape for Placement"=true
 
     # Players and sculpting tools will initialize with this hollow sculpting shape open-ended property value (hollow shapes, such as cylinders, pyramids, etc., can have open or closed ends). (default = false) [default: false]
     B:"Open Ends"=false
@@ -216,6 +219,9 @@
 
     # If set to true, whenever sculpting shape hollowness of sculpting wires is changed, a message will be added to chat indicating the change. This will not fill chat with messages, since any pre-existing messages from this mod will be deleted before adding the next.See 'Default Value' config for a description of sculpting shape hollowness of sculpting wires. (default = true) [default: true]
     B:"Hollow Shapes (wire)"=true
+
+    # If set to true, whenever whether or not sculpting shapes added with spades will be offset for placement is changed, a message will be added to chat indicating the change. This will not fill chat with messages, since any pre-existing messages from this mod will be deleted before adding the next.See 'Default Value' config for a description of whether or not sculpting shapes added with spades will be offset for placement. (default = true) [default: true]
+    B:"Offset Shape for Placement"=true
 
     # If set to true, whenever hollow sculpting shape open-endedness is changed, a message will be added to chat indicating the change. This will not fill chat with messages, since any pre-existing messages from this mod will be deleted before adding the next.See 'Default Value' config for a description of hollow sculpting shape open-endedness. (default = true) [default: true]
     B:"Open Ends"=true
@@ -288,6 +294,9 @@
 
     # If set to true, sculpting shape hollowness of sculpting wires will be set/stored in each individual sculpting tool and apply only to that tool. If set to false, it will be stored in the client config file called 'modeling_data' and will apply to all tools. Regardless of this setting, the client and tools will still initialize with data, but this setting determines which is considered for use. See 'Default Value' config for a description of sculpting shape hollowness of sculpting wires. (default = false) [default: false]
     B:"Hollow Shapes (wire)"=false
+
+    # If set to true, whether or not sculpting shapes added with spades will be offset for placement will be set/stored in each individual sculpting tool and apply only to that tool. If set to false, it will be stored in the client config file called 'modeling_data' and will apply to all tools. Regardless of this setting, the client and tools will still initialize with data, but this setting determines which is considered for use. See 'Default Value' config for a description of whether or not sculpting shapes added with spades will be offset for placement. (default = false) [default: false]
+    B:"Offset Shape for Placement"=false
 
     # If set to true, hollow sculpting shape open-endedness will be set/stored in each individual sculpting tool and apply only to that tool. If set to false, it will be stored in the client config file called 'modeling_data' and will apply to all tools. Regardless of this setting, the client and tools will still initialize with data, but this setting determines which is considered for use. See 'Default Value' config for a description of hollow sculpting shape open-endedness. (default = false) [default: false]
     B:"Open Ends"=false
