--- a/config/foamfix.cfg
+++ b/config/foamfix.cfg
@@ -13,6 +13,9 @@ client {
 
 
 coremod {
+    # Prevents BlockInfo from generating as many BlockPos objects; also, fixes a lighting bug. [default: true]
+    B:optimizedBlockInfo=true
+
     # Optimizes BlockPos mutable/immutable getters to run on the same variables, letting them be inlined and thus theoretically increasing performance. [default: true]
     B:optimizedBlockPos=true
 }
@@ -21,8 +24,17 @@ coremod {
 experimental {
     B:optimizedBlockPos=true
 
+    # Not fully benchmarked, experimental minor lighting calculation code optimization - according to preliminary tests, it doesn't impact performance while reducing GC churn. [default: true]
+    B:smallLightingOptimize=true
+
     # Replaces the default BlockState/ExtendedBlockState implementations with a far more memory-efficient variant. [default: true]
     B:smallPropertyStorage=true
+}
+
+
+expert {
+    # Do not delay lighting updates over other types of updates. [default: false]
+    B:immediateLightingUpdates=false
 }
 
 
