--- a/config/tombmanygraves.cfg
+++ b/config/tombmanygraves.cfg
@@ -22,9 +22,35 @@ compatibility {
     # If set to false, the grave will not grab any of the player's Thut's Wearables inventory. (Defaults to true)
     B:allowThutWearables=true
 
+    # Any item with an enchantment in this list will not be gathered by any grave (above the minimum level). The format is [registry_name_as_resource_location]#[minimum_accepted_level].
+    S:blacklistedEnchantments <
+        enderio:soulBound#0
+     >
+
+    # Any items in this list will not be gathered by any grave that forms. DO NOT remove tombmanygraves:DeathList from the blacklist; Doing such can cause graves to become too large and corrupt your world.
+    S:blacklistedItems <
+        tombmanygraves:DeathList
+        botanicaladdons:deathStone
+     >
+
     # A list of slots from the player's inventory to ignore upon death. (Defaults to nothing).
     I:blacklistedPlayerInventory <
      >
+}
+
+
+effects {
+    # If set to false, the item lists will not show the way to its grave. (Defaults to true.)
+    B:allowParticlePath=true
+
+    # This is the color of the path particles spawned by the death inventory list when you are more than 100 blocks from the grave. (Defaults to 0x000000
+    S:farParticleColor=0x000000
+
+    # This is the color of the path particles spawned by the inventory list when you are withing 10 blocks of the grave. (Defaults to 0xFFFFFF.)
+    S:nearParticleColor=0xFFFFFF
+
+    # If set to true, the death lists will only show their particles when the player is sneaking. (Defaults to false.)
+    B:requireSneakForPath=false
 }
 
 
@@ -86,6 +112,9 @@ graves {
 
 
 inventory {
+    # If set to false, death inventory lists will NOT be spawned in when a player respawns after death. (Defaults to true
+    B:allowInventoryLists=true
+
     # If set to true, a file will be generated for each player death, allowing OPs to restore a player's inventory from the file. Note that these files are *per machine*, that means you could potentially restore inventories from other worlds in single-player (or servers if you don't delete the inventory data). Setting this to false will disable any command that requires use of the backups to operate (restore, drop, and loot commands). (Defaults to true)
     B:allowInventorySaves=true
 }
